syntax = "proto3";

package api;

message CarModel {
    int32 id = 1;
    string name = 2;
}

message Component {
    int32 id = 1;
    string name = 2;
    int32 car_model_id = 3;
    int32 parent_id = 4;
}

message CreateCarModelRequest {
    string name = 1;;
}

message CreateCarModelResponse {
    CarModel result = 1;
}

message GetCarModelByIdRequest {
    int32 id = 1;
}

message GetCarModelResponse {
    CarModel result = 1;
}

message ListCarModelsRequst {}

message ListCarModelsResponse {
    repeated CarModel result = 1;
}

message DeleteCarModelRequest {
    int32 id = 1;
}

message DeleteCarModelResponse {}

message CreateComponentRequest {
    string name = 1;
    int32 car_model_id = 2;
    int32 parent_id = 4;
}

message CreateComponentResponse {
    Component result = 1;
}

message ListComponentResponse {
    repeated Component result = 1;
}

message GetTopLevelComponentsByCarModelRequest {
    int32 car_model_id = 1;
}

message GetChildComponentsByComponentRequest {
    int32 parent_id = 1;
}

message DeleteComponentRequest {
    int32 id = 1;
}

message UpdateComponentRequest {
    string name = 1;
}

message DeleteComponentResponse {}
message UpdateComponentResponse {
    Component result = 1;
}


service AutoCatalogService {
    rpc CreateCarModel(CreateCarModelRequest) returns (CreateCarModelResponse){}
    rpc GetCarModelById(GetCarModelByIdRequest) returns (GetCarModelResponse){}
    rpc ListCarModels(ListCarModelsRequst) returns (ListCarModelsResponse) {}
    rpc DeleteCarModel(DeleteCarModelRequest) returns (DeleteCarModelResponse){}
    rpc CreateComponent(CreateComponentRequest) returns (CreateComponentResponse){}
    rpc GetTopLevelComponentsByCarModel(GetTopLevelComponentsByCarModelRequest) returns (ListComponentResponse){}
    rpc GetChildComponentsByComponent(GetChildComponentsByComponentRequest) returns (ListComponentResponse){}
    rpc DeleteComponent(DeleteComponentRequest) returns (DeleteComponentResponse){}
    rpc UpdateComponent(UpdateComponentRequest) returns(UpdateComponentResponse){}
}
